# bridge-adaptivity

./: .codeclimate.yml  .coveragerc  .ebignore  .editorconfig  .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  LICENSE  Makefile  README.md  fakeInitials.R  initialsSuperEarths.R  master.R  optimizer.R  requirements_base.txt  setup.cfg  tox.ini  update_stage.sh
activity_service/: models.py  utils.py
adaptive-engine/: additiveFormulation.py  derivedData.R  derivedData.py  empiricalEstimation.py  fakeInitials.R  fakeInitials.py  multiplicativeFormulation.py  sim.py
adaptive-engine-example/app/: secure_example.py  settings.py  urls.py
adaptive-engine-example/engine/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
adaptive_edx/: urls.py
api/: views.py
bridge-adaptivity/: Dockerfile  Dockerfile_local  docker-compose.yml  docker-compose_local.yml  local-compose.yml  manage.py  prod_run.sh  requirements.txt  requirements_base.txt  requirements_local.txt
bridge_adaptivity/: .codeclimate.yml  .dockerignore  Dockerfile  Dockerfile_local  Dockerfile_opt  Dockerfile_stage  Dockerrun.aws.json  Makefile  docker-compose-selenium.yml  docker-compose-stage.yml  docker-compose.yml  docker-compose_local.yml  entrypoint.sh  local_run.sh  prod_run.sh  pytest.ini  requirements.txt  requirements_base.txt  requirements_base.txt  # includes the base.txt  requirements_local.txt  tox.ini  update_stage.sh
lti/: models.py  urls.py  utils.py  validator.py  views.py
module/: admin.py  models.py  tutorgen_api.py  utils.py  views.py
static/: ok_to_delete.txt
(+385 files in other folders)
