[metadata]
name = bridge-adaptivity
summary = Bridge for Adaptivity
license = BSD
description-file =
    README.md
requires-python = >=2.7
classifier =
    Environment :: OpenEdx
    Environment :: Edx
    Intended Audience :: Online Education
    Intended Audience :: Course Instructors
    License :: OSI Approved :: The 3-Clause BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: JavaScript
    Programming Language :: HTML


[files]
packages =
    bridge-adaptivity
    adaptive-engine
